--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Lake Cavanaugh
-subtitle: "Demo Mode"
+#subtitle: "Demo Mode"
 name: Lake Cavanaugh
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
