--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,6 +1,6 @@
 Josh Furman:
   name: "Josh Furman"
-  bio: "Website wrangler!"
+  bio: "LCIA Volunteer"
   avatar: "/_lfs/images/josh_furman.jpg"
   links:
     - label: "Email"
