update officers & committees

--- a/_data/committees/right/pr-welcome.yml
+++ b/_data/committees/right/pr-welcome.yml
@@ -1,10 +1,14 @@
 committee: pr & welcome
 name: Public Relations & Welcome Committee
 volunteers:
-  - name: Nancy Baily
-    email: nabailey60@gmail.com
-    phone: (206) 794-1549
+  - name: Rick Diedrich
+    email: 
+    phone: (206) 890-6985
 
   - name: Larita Humble
     email: larita_humble@frontier.com
     phone: (206) 794-7141
+
+  - name: Debbie Stinson
+    email: stinsonds@gmail.com
+    phone: (425) 345-0966
