--- a/_data/committees/right/rummage_sale.yml
+++ b/_data/committees/right/rummage_sale.yml
@@ -1,9 +1,9 @@
 committee: rummage sale
 name: Rummage Sale
 volunteers:
-  - name: Gay Duvall
-    email: duvallg@comcast.net
-    phone: (206) 284-3501
+  - name: Christine Nielsen
+    email: 4nielsen@gmail.com
+    phone: (360) 420-7140
 
   - name: Wendy Ostenson
     email: wendelinann@gmail.com
