--- a/_data/committees/right/sports_court.yml
+++ b/_data/committees/right/sports_court.yml
@@ -5,6 +5,6 @@ volunteers:
     email: msokelley@hotmail.com
     phone: (425) 737-9556
 
-  - name: Mike Renstrom
-    email: mike@qaglass.com
-    phone: (206) 369-7545
+  - name: Moe Wagner
+    email: loghomesbymoe@gmail.com
+    phone: (206) 795-5178
