--- a/_data/directors.yml
+++ b/_data/directors.yml
@@ -2,11 +2,11 @@
   email:
   phone: (206) 890-6985
 - name: Bob McCullough
-  email:
+  email: bob@southshorepartnersllc.com
   phone: (206) 255-5119
 - name: Priscilla McElhose
-  email:
+  email: pmcelhose@icloud.com
   phone: (360) 422-5606
 - name: Mick Steinman
-  email:
+  email: sled.man@frontier.com
   phone: (206) 949-7837
