Update CC images add gallary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,19 @@
 {
     "cSpell.words": [
         "Cavanaugh",
+        "forloop",
+        "funfest",
         "jmatusak",
         "Larita",
         "LCFD",
         "LCIA",
+        "letterstring",
         "Matusak",
+        "nextindex",
+        "nextletter",
         "Pletz",
+        "previndex",
+        "prevletter",
         "Skagit",
         "weatherwidget",
         "Zeffy"
