Update volunteers for 2024

--- a/_data/committees/right/sports_court.yml
+++ b/_data/committees/right/sports_court.yml
@@ -1,10 +1,6 @@
 committee: sports court activities
 name: Sports Court Activities
 volunteers:
-  - name: Shannon O’Kelley
-    email: msokelley@hotmail.com
-    phone: (425) 737-9556
-
-  - name: Moe Wagner
-    email: loghomesbymoe@gmail.com
-    phone: (206) 795-5178
+  - name: Rick & Jean Zahalka
+    email: zahalka@frontier.com
+    phone: (425) 220-5012
