--- a/_data/directors.yml
+++ b/_data/directors.yml
@@ -1,9 +1,9 @@
 - name: Rick Diedrich
-  email:
+  email: ddiedrich84@hotmail.com
   phone: (206) 890-6985
-- name: Bob McCullough
-  email: bob@southshorepartnersllc.com
-  phone: (206) 255-5119
+- name: Kim Kelly
+  email: kbkjkelly@gmail.com
+  phone: (206) 200-1508
 - name: Priscilla McElhose
   email: pmcelhose@icloud.com
   phone: (360) 422-5606
