--- a/_data/officers.yml
+++ b/_data/officers.yml
@@ -11,6 +11,6 @@
   email: stinsonds@gmail.com
   phone: (425) 345-0966
 - position: Treasurer
-  name: Christine Nielsen
-  email: 4nielsen@gmail.com
-  phone: (360) 420-7140
+  name: Matt Douglas
+  email: mattdouglas1960@gmail.com
+  phone: (206) 406-1697
