Update build command

--- a/amplify.yml
+++ b/amplify.yml
@@ -3,7 +3,7 @@ frontend:
   phases:
     build:
       commands:
-        - jekyll b
+        - bundle exec jekyll b
   artifacts:
     baseDirectory: _site
     files:
