--- a/amplify.yml
+++ b/amplify.yml
@@ -1,6 +1,9 @@
 version: 1
 frontend:
   phases:
+    preBuild:
+      commands:
+        - bundle install
     build:
       commands:
         - bundle exec jekyll b
