--- a/_data/events.yml
+++ b/_data/events.yml
@@ -33,8 +33,8 @@
   description: Fun Fest - Fishing Derby
   link: /events/event_funfest_fish
 
-- event: LCIA Arts & Crafts Fair
-  date: Sep. 1st - 11:00 - 3:00
+- event: Arts & Crafts Fair
+  date: Sep. 1st
   description: The Craft Fair will be part of our Labor Day weekend celebrations
   link: /events/event_craft_fair
 
