update fill the boot

--- a/_data/events.yml
+++ b/_data/events.yml
@@ -41,7 +41,7 @@
 - event: Fill the Boot
   date: Sep. 1st
   description: Support the LCFD!
-  link: /events
+  link: /fire/auxiliary#fill-the-boot-fundraiser
 
 - event: Labor Day Dance
   date: Sep. 1st
